# Multi_AI_Agent_Medical_Assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  sample_order.json  test_handoffs.py  test_sample_order.py  verify_setup.py
Agents/: coordinator.py  doctor_escalation.py  imaging.py  ingestion.py  pharmacy_match.py  therapy.py
Data/: doctors.csv  interactions.csv  inventory.csv  medicines.csv  pharmacies.json  zipcodes.csv
Docs/: Healthcare_Assistant_Presentation.pptx
Testcases/screenshots/: Tested_Scenarios.xlsx
Utils/: __init__.py  constants.py  data_loader.py  logger.py  lookups.py
tests/integration/: __init__.py  test_full_flow.py  test_imaging_to_therapy.py  test_ingestion_to_imaging.py  test_therapy_to_pharmacy.py
tests/unit/: __init__.py  test_imaging.py  test_ingestion.py  test_pharmacy.py  test_therapy.py
tmp/: .gitkeep
