[project]
name = "multi-ai-agent-medical-assistant"
version = "0.1.0"
description = "An educational multi-agent medical assistant proof of concept"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.20.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Agents", "Utils"]
